[project]
name = "nonebot-plugin-steam-info"
version = "1.2.2"
description = "Default template for PDM package"
authors = [
    {name = "zhaomaoniu", email = "2667292003@qq.com"},
]
dependencies = [
    "nonebot2>=2.2.0",
    "nonebot-plugin-alconna>=0.37.0",
    "aiohttp>=3.9.3",
    "Pillow>=10.2.0",
    "nonebot-plugin-apscheduler>=0.4.0",
    "nonebot-plugin-localstore>=0.6.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
