[project]
name = "nonebot-plugin-steam-info"
version = "1.3.5"
description = "Steam 好友状态播报 NoneBot 插件"
authors = [
    {name = "zhaomaoniu", email = "2667292003@qq.com"},
]
dependencies = [
    "nonebot2>=2.2.0",
    "nonebot-plugin-alconna>=0.54.2",
    "Pillow>=10.2.0",
    "nonebot-plugin-apscheduler>=0.4.0",
    "nonebot-plugin-localstore>=0.6.0",
    "httpx<0.28.0,>=0.27.0",
    "numpy>=1.24.4",
    "beautifulsoup4>=4.12.3",
    "pytz>=2024.2",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
